--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration production",
+    "build:analyze": "ng build --configuration production --source-map",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
