--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:prod": "ng build --configuration production",
     "build:analyze": "ng build --configuration production --source-map",
     "watch": "ng build --watch --configuration development",
+    "explorer": "npm run build:analyze && source-map-explorer dist/**/*.js",
     "test": "ng test",
     "lint": "ng lint",
     "lint-html": "ng lint > eslint/report.html --format html --silent",
@@ -50,6 +51,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.1.1",
+    "source-map-explorer": "^2.5.3",
     "typescript": "~5.2.2"
   }
 }
